# MoviesScroller

./: .gitignore  CMakeLists.txt  PerpendicularShadowEffect.cpp  PerpendicularShadowEffect.hpp  PosterWidget.cpp  PosterWidget.hpp  README.md  Window.cpp  Window.hpp  main.cpp
